--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,5 +1,8 @@
 version: 0.2
 phases:
+  install:
+    runtime-versions:
+      java: corretto11
   pre_build:
     commands:
       - echo Logging in to Amazon ECR...
@@ -11,6 +14,7 @@ phases:
   build:
     commands:
       - echo Build started on `date`
+      - mvn install
       - echo Building the Docker image...          
       - docker build -t $REPOSITORY_URI:latest .
       - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
@@ -23,4 +27,5 @@ phases:
       - echo Writing definitions file...
       - printf '[{"name":"project-container","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > taskdefinition.json
 artifacts:
-    files: taskdefinition.json
+    files: 
+      - target/tweetanalyser-0.0.1-SNAPSHOT.jar
